sg-OpenVPNAccessServer-2-5-0-AutogenByAWSMP.tf
resource "aws_security_group" "openvpn-server-sg" {
  tags = {
    Name = "openvpn-server-sg"
  }
  name = "openvpn-server-sg"
  description = "This security group was generated by AWS Marketplace and is based on recommended settings for OpenVPN Access Server version 2.5.0 provided by OpenVPN Technologies, Inc."
  vpc_id      = "${aws_vpc.main.id}"

  ingress {
    from_port = 1194
    to_port = 1194
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 943
    to_port = 943
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
